--- a/main.css
+++ b/main.css
@@ -56,6 +56,7 @@ ul {
 ul li {
     max-width: 25%;
     list-style: none;
+    position: relative;
 }
 
 ul li img {
@@ -66,4 +67,7 @@ ul li img {
     padding: 16px;
     background-color: rgba(0, 0, 0, 0.7);
     position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
