--- a/main.css
+++ b/main.css
@@ -72,9 +72,15 @@ ul li img {
     bottom: 0;
     left: 0;
     width: 100%;
+    opacity: 0;
+    transition: all ease .5s;
 }
 
 .overlay-img-link a {
     color: #fff;
     text-decoration: none;
+}
+
+ul li:hover .overlay-img-link {
+    opacity: 1;
 }
