--- a/main.css
+++ b/main.css
@@ -67,13 +67,14 @@ ul li img {
 
 .overlay-img-link {
     padding: 16px;
+    margin: 16px 0;
     background-color: rgba(0, 0, 0, 0.7);
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     opacity: 0;
-    transition: all ease .2s;
+    transition: all ease .5s;
 }
 
 .overlay-img-link a {
